♻️ UPDATE Aktualisierung der Übersetzung für "Webseitenbenutzer"
- Ersetzen Sie alle Vorkommen von "WebseitenBenutzer" durch "Webseitenbenutzer"
- Stellen Sie sicher, dass die Schreibweise konsistent ist

--- a/upload/language/German/adminpanel.lng
+++ b/upload/language/German/adminpanel.lng
@@ -900,7 +900,7 @@ die Webseitenadministration",
 	'header_groups'             => "Benutzergruppen",
 	'header_groups_1'           => "Verwaltung der Benutzergruppen",
 	'header_opt_1'              => "Datenbankoptimierung",
-	'header_m_1'                => "Konfiguration der E-Mail-Design, die von der Webseite gesendet werden",
+	'header_m_1'                => "Konfiguration der E-Mail-Vorlagen, die von der Webseite gesendet werden",
 	'header_st_1'               => "Verwaltung der statischen Seiten der Webseite",
 	'opt_catc_1'                => "Erstellung und Verwaltung von Kategorien in den Nachrichten",
 	'add_news'                  => "Nachricht hinzufügen",
@@ -1369,7 +1369,7 @@ die Webseitenadministration",
 	'hint_bstart'               => "Geben Sie das Startdatum der Banner-Anzeige auf der Webseite an. Dieser Parameter ist optional, und Sie können ihn leer lassen. In diesem Fall wird der Banner sofort angezeigt.",
 	'hint_bend'                 => "Geben Sie das Enddatum der Banner-Anzeige auf der Webseite an. Dieser Parameter ist optional, und Sie können ihn leer lassen. In diesem Fall hat die Anzeige des Banners kein Ende.",
 	'mass_clear_cloud'          => "Tag-Cloud bereinigen",
-	'mass_clear_cloud_1'        => "Sind Sie sicher, dass Sie die Tag-Cloud der ausgewählten bereinigen möchten",
+	'mass_clear_cloud_1'        => "Sind Sie sicher, dass Sie die Tag-Cloud der ausgewählten Nachrichten bereinigen möchten",
 	'mass_clear_cloud_2'        => "Bereinigung der Schlüsselwörter aus der Tag-Cloud",
 	'opt_vconf'                 => "Konfiguration der Medienplayer",
 	'opt_vconfc'                => "Verwaltung der Einstellungen der Player, die für die Nachricht von Video- und Audiomaterial auf der Webseite verwendet werden",
@@ -1855,7 +1855,7 @@ die Webseitenadministration",
 	'rss_maxnews'               => "Anzahl der Nachrichten",
 	'rss_hmaxnews'              => "Der Import von Nachrichten ist ein ziemlich ressourcenintensiver Prozess, es wird nicht empfohlen, große Werte zu setzen",
 	'rss_cookie'                => "Cookies der Webseite",
-	'rss_hcookie'               => "Manchmal ist für den Erhalt vollständiger Informationen von der Webseite eine Authentifizierung auf der Webseite erforderlich. Sie können Cookies angeben, die die Webseite für die Authentifizierung verwendet, zum Beispiel für Webseites auf DataLife Engine müssen Sie dle_user_id=id und dle_password=71820d7c524 eingeben. In jeder neuen Zeile wird ein neuer Cookie-Wert angegeben.",
+	'rss_hcookie'               => "Manchmal ist für den Erhalt vollständiger Informationen von der Webseite eine Authentifizierung auf der Webseite erforderlich. Sie können Cookies angeben, die die Webseite für die Authentifizierung verwendet, zum Beispiel für Webseiten auf DataLife Engine müssen Sie dle_user_id=id und dle_password=71820d7c524 eingeben. In jeder neuen Zeile wird ein neuer Cookie-Wert angegeben.",
 	'rss_password'              => "Passwort",
 	'rss_ok1'                   => "Neuer RSS-Kanal erfolgreich hinzugefügt",
 	'rss_ok2'                   => "RSS-Kanal erfolgreich bearbeitet",
@@ -2637,7 +2637,7 @@ die Webseitenadministration",
 	'opt_sys_aifr'              => "Einfügung von iframe in Nachrichtstexte erlauben",
 	'opt_sys_aifrd'             => "Bei Aktivierung dieser Einstellung wird das Einfügen von iframe-Tags in Nachrichtstexte erlaubt, zum Beispiel können Sie Video-Einbettungen und andere Multimedia-Inhalte von verschiedenen Webseites und Diensten einfügen",
 	'opt_sys_aifdl'             => "Liste der erlaubten Domains für die Einfügung mit iframe",
-	'opt_sys_aifdld'            => "Das iframe-Tag ist ein sehr gefährliches Tag, daher ist es notwendig, Inhalte nur von vertrauenswürdigen Webseites einzufügen. Sie können eine Liste der Domains angeben, die für die Verwendung in diesem Tag erlaubt sind. Domains werden durch Kommas getrennt aufgelistet, ohne Angabe der Protokolle http oder https sowie ohne Angabe von www. Zum Beispiel, um die Einfügung vom YouTube-Dienst zu erlauben, geben Sie einfach den Domainnamen youtube.com an usw.",
+	'opt_sys_aifdld'            => "Das iframe-Tag ist ein sehr gefährliches Tag, daher ist es notwendig, Inhalte nur von vertrauenswürdigen Webseiten einzufügen. Sie können eine Liste der Domains angeben, die für die Verwendung in diesem Tag erlaubt sind. Domains werden durch Kommas getrennt aufgelistet, ohne Angabe der Protokolle http oder https sowie ohne Angabe von www. Zum Beispiel, um die Einfügung vom YouTube-Dienst zu erlauben, geben Sie einfach den Domainnamen youtube.com an usw.",
 	'opt_sys_phpe'              => "Ausgabe von PHP-Fehlern aktivieren",
 	'opt_sys_phped'             => "Bei Aktivierung dieser Einstellung werden PHP-Fehler, die auf dem Server auftreten, im Browser ausgegeben. Falls die Fehlerausgabe deaktiviert ist, werden sie nicht im Browser ausgegeben. Wir empfehlen, diese Option während technischer Arbeiten auf der Webseite zu aktivieren, zum Beispiel vor der Aktualisierung des Skripts, um bei Problemen diese visuell zu sehen. Und während des normalen Webseitenbetriebs zu deaktivieren.",
 	'hidpi_upl'                 => "HiDPI (Retina) Bild",
@@ -3018,7 +3018,7 @@ die Webseitenadministration",
 	'opt_fil'       => "Wortfilter",
 	'opt_filc'      => "Einstellung des Wortfilters, der angegebene Wörter beim Hinzufügen von Nachrichten oder Kommentaren löscht oder ersetzt",
 	'opt_email'     => "E-Mail-Nachrichtenvorlagen",
-	'opt_emailc'    => "Einstellung von E-Mail-Nachrichtenvorlagen, die das Skript von der Webseite bei der Registrierung von Benutzern, Wiederherstellung von Passwörtern usw. sendet",
+	'opt_emailc'    => "Einstellung von E-Mail-Nachrichtevorlagen, die das Skript von der Webseite bei der Registrierung von Benutzern, Wiederherstellung von Passwörtern usw. sendet",
 	'opt_xfil'      => "Zusätzliche Felder für Nachrichten",
 	'opt_xfilc'     => "Erstellung zusätzlicher Felder für Nachrichten, die für eine bequemere Hinzufügung von Nachrichten auf der Webseite gedacht sind",
 	'opt_db'        => "Datenbank verwalten",
