--- a/upload/language/German/website.lng
+++ b/upload/language/German/website.lng
@@ -560,7 +560,7 @@ $lang = [
 	'reg_err_30'               => "Der Benutzername darf nicht leer sein!",
 	'reg_err_31'               => "Die Länge des Passworts muss mindestens 6 Zeichen betragen!",
 	'reg_err_32'               => "Beide eingegebenen Passwörter müssen identisch sein!",
-	'reg_err_33'               => "Falscher E-Mail-Adressenname!",
+	'reg_err_33'               => "Falscher E-Mail-Adressname!",
 	'rss_user'                 => "Alle Artikel eines Benutzers über RSS verfolgen",
 	'show_archive'             => "Alle Archivseiten anzeigen / verstecken",
 	'no_message'               => "Zu dieser Zeit haben Sie keine persönlichen Nachrichten",
@@ -584,7 +584,7 @@ $lang = [
 	'rules_decline'            => "Ich stimme nicht zu",
 	'reg_err_21'               => "<li>Von der Webseitenverwaltung wurde der Benutzername {descr} nicht verwendet</li>",
 	'reg_err_22'               => ", aus folgendem Grund: {descr}",
-	'reg_err_23'               => "<li>Von der Webseitenverwaltung wurde der E-Mail-Adressenname {descr} nicht verwendet</li>",
+	'reg_err_23'               => "<li>Von der Webseitenverwaltung wurde der E-Mail-Adressname {descr} nicht verwendet</li>",
 	'reason'                   => "Geben Sie einen Grund für die Bearbeitung an:",
 	'tag_cloud'                => "Tag-Wolke",
 	'last_news'                => "Letzte Nachrichten auf der Webseite",
@@ -806,7 +806,7 @@ $lang = [
 	'reg_err_3'  => "<li>Ungültige Länge des Namens. Der Login darf nicht weniger als 3 Zeichen und nicht mehr als 40 Zeichen lang sein!</li>",
 	'reg_err_4'  => "<li>Sie verwenden keinen gültigen Namen!</li>",
 	'reg_err_5'  => "<li>Sie verwenden kein gültiges Passwort!</li>",
-	'reg_err_6'  => "<li>Falscher E-Mail-Adressenname!</li>",
+	'reg_err_6'  => "<li>Falscher E-Mail-Adressname!</li>",
 	'reg_err_7'  => "Der Benutzername darf nicht leer sein!",
 	'reg_err_8'  => "<li>Es gibt bereits einen Benutzer mit diesem Namen oder E-Mail-Adresse!</li>",
 	'reg_err_9'  => "Von der Webseitenverwaltung wurde die Registrierung nicht unterstützt.",
@@ -919,14 +919,14 @@ $lang = [
 	'lost_err_1' => "Der Benutzer mit diesem Namen oder E-Mail-Adresse wurde nicht in der Datenbank gefunden",
 
 	'news_err_1'  => "Sie haben einen zu langen Namen eingegeben.",
-	'news_err_2'  => "Sie haben einen zu langen E-Mail-Adressenname eingegeben.",
+	'news_err_2'  => "Sie haben einen zu langen E-Mail-Adressname eingegeben.",
 	'news_err_3'  => "Sie haben einen zu langen Kommentar eingegeben.",
 	'news_err_4'  => "Schutz gegen Spam aktiviert.",
 	'news_err_5'  => "Sie können nur einen erneuten Kommentar für diesen Artikel über",
 	'news_err_6'  => "Sekunden",
 	'news_err_7'  => "<li>Es tut uns leid, aber Sie haben Ihren Namen oder E-Mail-Adresse eines registrierten Benutzers eingegeben. Wenn Sie dieser Benutzer sind, müssen Sie sich in der Benutzerverwaltungsseite anmelden.</li>",
 	'news_err_9'  => "Das Feld \"Name\" ist ein obligatorisches Feld und darf nicht leer sein.",
-	'news_err_10' => "Es tut uns leid, aber Sie haben einen falschen E-Mail-Adressenname eingegeben.",
+	'news_err_10' => "Es tut uns leid, aber Sie haben einen falschen E-Mail-Adressname eingegeben.",
 	'news_err_11' => "Das Feld \"Kommentar\" ist ein obligatorisches Feld und darf nicht leer sein.",
 	'news_err_12' => "Leider ist diese Seite für Sie nicht verfügbar, möglicherweise wurde ihre Adresse geändert oder sie wurde gelöscht. Bitte verwenden Sie die Suche.",
 	'news_err_13' => "<li>Sie haben keine Berechtigung, um dieses Profil zu bearbeiten!</li>",
@@ -937,7 +937,7 @@ $lang = [
 	'news_err_18' => "<li>Beide eingegebenen Passwörter müssen identisch sein!</li>",
 	'news_err_19' => "<li>Die Länge des Passworts muss mindestens 6 Zeichen und nicht mehr als 72 Zeichen betragen!</li>",
 	'news_err_20' => "<li>Sie verwenden ein ungültiges Passwort!</li>",
-	'news_err_21' => "<li>Falscher E-Mail-Adressenname!</li>",
+	'news_err_21' => "<li>Falscher E-Mail-Adressname!</li>",
 	'news_err_22' => "<li>Zu lange Information über Sie!</li>",
 	'news_err_23' => "<li>Es wurde ein zu langsamer Name eingegeben!</li>",
 	'news_err_24' => "<li>Länder mit einem solchen langen Namen gibt es nicht!</li>",
@@ -948,7 +948,7 @@ $lang = [
 
 	'feed_err_1' => "<li>Sie haben Ihren Namen nicht angegeben.</li>",
 	'feed_err_2' => "<li>Sie haben Ihre E-Mail-Adresse nicht angegeben.</li>",
-	'feed_err_3' => "<li>Falscher E-Mail-Adressenname!</li>",
+	'feed_err_3' => "<li>Falscher E-Mail-Adressname!</li>",
 	'feed_err_4' => "<li>Sie haben den Betreff der Nachricht nicht angegeben.</li>",
 	'feed_err_5' => "<li>Sie haben den Text der Nachricht nicht angegeben.</li>",
 	'feed_err_6' => "Es ist nicht möglich, Ihre Nachricht zu senden.",
