♻️ UPDATE: Aktualisierung der deutschen Sprachdatei
- Arrays wurden gefixt
- Dublikate wurden entfernt

--- a/upload/language/German/adminpanel.lng
+++ b/upload/language/German/adminpanel.lng
@@ -1524,7 +1524,7 @@ die Webseitenadministration",
 	'group_max_info'            => "Maximale Anzahl der Zeichen in der kurzen Information über sich selbst",
 	'hint_max_info'             => "Geben Sie die maximale Anzahl der zulässigen Zeichen in der kurzen Information über sich selbst des Benutzers ein. Falls Sie die Beschränkung der Anzahl der Zeichen aufheben möchten, geben Sie 0 ein.",
 	'get_offline_key'           => "<br /><br />Es ist auch nicht ausgeschlossen, dass auf Ihrem Server ausgehende Verbindungen deaktiviert oder verboten sind. Daher können Sie das Skript im manuellen Modus aktivieren. Dafür müssen Sie dem folgenden Link folgen:",
-	'get_key'                   => "Webseitencode erhalten."
+	'get_key'                   => "Webseitencode erhalten.",
 	'key_activation'            => "Nachdem Sie auf der Webseite dle-news.ru einen speziellen Webseitencode erhalten haben, kehren Sie zu Ihrem Adminpanel zurück und geben Sie den erhaltenen Code anstelle Ihres Schlüssels ein.",
 	'trial_act5'                => "Der eingegebene Webseitencode ist für diese Skriptversion nicht anwendbar. Sie müssen Ihren Lizenzschlüssel zur Aktivierung Ihres Skripts eingeben oder einen neuen Webseitencode generieren.",
 	'find_rtags'                => "in der Tag-Cloud",
@@ -1980,7 +1980,7 @@ die Webseitenadministration",
 	'a_feed'                    => "Verwendung des Kontaktformulars",
 	'a_search'                  => "Verwendung der Webseitensuche",
 	'hint_gasearch'             => "Erlaubnis für den Benutzer, die Webseitensuche zu verwenden",
-	'hint_gafeed'               => "Erlaubnis für den Benutzer, das Kontaktformular auf der Webseite zu verwenden, um E-Mails an registrierte Benutzer der Webseite zu senden. Im Falle eines Verbots kann er nur E-Mails an die Webseitenadministration senden."
+	'hint_gafeed'               => "Erlaubnis für den Benutzer, das Kontaktformular auf der Webseite zu verwenden, um E-Mails an registrierte Benutzer der Webseite zu senden. Im Falle eines Verbots kann er nur E-Mails an die Webseitenadministration senden.",
 	'site_status'               => "Webseitenbetriebsmodus:",
 	'comm_view'                 => "Anzeigen",
 	'comm_del'                  => "Alle löschen",
@@ -2368,114 +2368,11 @@ die Webseitenadministration",
 	'addnews_fix'               => "Nachricht fixieren",
 	'addnews_error'             => "Fehlermeldung",
 	'addnews_erdate'            => "Ungültiges Datumsformat.",
-	// 17.2
-	'opt_sys_cpml'              => "Anzahl der Kommentare pro Seite beim Anzeigen der Seite aller letzten Kommentare",
-	'opt_sys_cpmld'             => "Geben Sie an, wie viele Kommentare pro Seite angezeigt werden sollen, wenn die Seite aller letzten Kommentare angezeigt wird.",
-	'opt_sys_max_new'           => "Anzahl der Stunden, in denen eine Nachricht als neu gilt",
-	'opt_sys_max_newd'          => "Geben Sie die maximale Anzahl der Stunden ein, in denen eine Nachricht nach ihrer Hinzufügung auf der Webseite als neu gilt. Diese Einstellung wird für die Tags [new] Text [/new] in den Templates verwendet, um neue Nachrichten zu kennzeichnen. Die Zeit wird in Stunden ab dem Zeitpunkt der Hinzufügung der Nachricht auf der Webseite angegeben. Zum Beispiel 24, dies bedeutet, dass die Nachricht während eines Tages als neu gilt.",
-	'opt_sys_max_upd'           => "Anzahl der Stunden, in denen eine Nachricht als aktualisiert gilt",
-	'opt_sys_max_updd'          => "Geben Sie die maximale Anzahl der Stunden ein, in denen eine Nachricht nach ihrer Bearbeitung als aktualisiert gilt. Diese Einstellung wird für die Tags [updated] Text [/updated] in den Templates verwendet, um aktualisierte Nachrichten zu kennzeichnen. Die Zeit wird in Stunden ab dem Zeitpunkt der Bearbeitung der Nachricht angegeben. Zum Beispiel 24, dies bedeutet, dass die Nachricht während eines Tages als aktualisiert gilt.",
-	'v_closed'                  => "Umfrage für Abstimmungen schließen",
-	'hint_vclosed'              => "Falls die Umfrage geschlossen wird, wird sie weiterhin in der Nachricht angezeigt, dabei können Benutzer keine Stimmen mehr abgeben, sondern sehen nur noch die Ergebnisse der Umfrage",
-	'v_closed_date'             => "Diese Umfrage wurde am {date} geschlossen",
-	'xfield_xi36'               => "Sie können die minimale Anzahl von Zeichen festlegen, die in diesem Feld beim Schreiben einer Nachricht geschrieben werden müssen. Falls Sie diese Einschränkung nicht festlegen möchten, lassen Sie das Feld leer.",
-	'xfield_xi37'               => "Sie können die maximale Anzahl von Zeichen festlegen, die in diesem Feld beim Schreiben einer Nachricht geschrieben werden müssen. Falls Sie diese Einschränkung nicht festlegen möchten, lassen Sie das Feld leer.",
-	'xfield_f36'                => "Minimale Anzahl von Zeichen im Feld",
-	'xfield_f37'                => "Maximale Anzahl von Zeichen im Feld",
-	'addnews_xf_alert_2'        => "Das Feld <b>{field}</b> muss mindestens <b>{count}</b> Zeichen enthalten",
-	'addnews_xf_alert_3'        => "Das Feld <b>{field}</b> darf höchstens <b>{count}</b> Zeichen enthalten",
-	'group_acn'                 => "Entsendung von Beschwerden über Nachrichten erlauben",
-	'group_acnd'                => "Bei Aktivierung dieser Einstellung können Benutzer auf der Webseite Beschwerden über veröffentlichte Nachrichten einreichen",
-	'group_acc'                 => "Entsendung von Beschwerden über Kommentare erlauben",
-	'group_accd'                => "Bei Aktivierung dieser Einstellung können Benutzer auf der Webseite Beschwerden über veröffentlichte Kommentare einreichen",
-	'group_aco'                 => "Entsendung von Beschwerden über Rechtschreibfehler erlauben",
-	'group_acod'                => "Bei Aktivierung dieser Einstellung können Benutzer auf der Webseite Beschwerden über Rechtschreibfehler einreichen",
-	'opt_sys_cm'                => "Maximale Anzahl von Beschwerden",
-	'opt_sys_cmd'               => "Sie können die maximale Anzahl von Beschwerden angeben, die Benutzer über Nachrichten, Kommentare oder Rechtschreibfehler einreichen können",
-	// 17.2
-
-	// 17.1
-	's_not_found'               => "Nichts gefunden",
-	'system_find'               => "Suche in den Einstellungen",
-	'opt_sys_inden'             => "Anbieter für IndexNow-Benachrichtigungen",
-	'opt_sys_indend'            => "Wählen Sie den Anbieter für IndexNow-Benachrichtigungen aus, der für die Benachrichtigung von Suchmaschinen verwendet wird. Die Wahl des Anbieters beeinflusst nicht, welche Suchmaschinen benachrichtigt werden, sie werden automatisch alle benachrichtigt. Aber die Wahl des Anbieters beeinflusst die Reaktionsgeschwindigkeit und Antwort auf die Benachrichtigung, daher wählen Sie denjenigen, der am schnellsten auf Ihre Webseite antwortet und am nächsten gelegen ist.",
-	'opt_sys_qemo'              => "Modus für schnelles Bearbeiten von Nachrichten auf der Webseite:",
-	'opt_sys_qemod'             => "Sie können den Modus wählen, in dem das schnelle Bearbeiten auf der Webseite durchgeführt wird. Falls der Modus nur ausgefüllte Felder gewählt wird, werden beim schnellen Bearbeiten nur die Felder angezeigt, die zuvor bei der Nachricht ausgefüllt waren, als sie hinzugefügt wurde. Falls das Bearbeiten aller Felder gewählt wird, können im schnellen Bearbeiten alle für diese Nachricht verfügbaren Felder bearbeitet und ausgefüllt werden.",
-	'opt_sys_qemo1'             => "Nur zuvor ausgefüllte Felder",
-	'opt_sys_qemo2'             => "Alle Felder",
-	'opt_sys_imuqid'            => "Hinzufügen eines eindeutigen Präfixes zum Namen des hochgeladenen Bildes",
-	'opt_sys_imuqidd'           => "Falls 'Aktiviert', wird zum Namen des für Nachrichten hochgeladenen Bildes ein eindeutiges Präfix hinzugefügt, das den Dateinamen eindeutig macht. Falls 'Deaktiviert', geschieht dies nicht, und falls eine solche Datei nicht auf dem Server existiert, bleibt ihr Name original. Die Aktivierung ist normalerweise notwendig, falls Sie gleichzeitig Dateien mit identischen Namen aus verschiedenen Ordnern hochladen, oder zum Beispiel, falls Sie häufig dieselbe Datei neu hochladen, um Browser-Caching zu vermeiden",
-	'google_set_images'         => "Bilder, die für Nachrichten hochgeladen wurden, in die Sitemap aufnehmen",
-	'plugins_a_1'               => "Aktivieren",
-	'plugins_a_2'               => "Deaktivieren",
-	'plugins_a_3'               => "Herunterladen",
-	'plugins_a_4'               => "Updates prüfen",
-	'plugins_a_5'               => "Update hochladen",
-	'xfield_asm'                => "Auswahl mehrerer Werte erlauben",
-	'xfield_asm1'               => "Sie können die Auswahl mehrerer Werte aus dieser Liste erlauben oder verbieten. Falls diese Option deaktiviert ist, kann der Benutzer beim Schreiben einer Nachricht nur einen Wert aus der Liste auswählen.",
-	'xfield_separator_3'        => "Trennzeichen beim Anzeigen mehrerer Werte des Feldes",
-	'xfield_separator_2'        => "Falls für das Feld die Auswahl mehrerer Werte erlaubt ist, können Sie ein Trennzeichen angeben, das beim Anzeigen in der Nachricht zwischen den Werten verwendet wird. Die Verwendung von HTML-Code ist ebenfalls erlaubt. Falls Sie diese Einstellung leer lassen, wird ein Komma verwendet",
-	// 17.1
-
-	// 17.0
-	'found_news'                => "(Gefunden: {count})",
-	'all_enable'                => "Aktivieren",
-	'redirects_off'             => "Die Verwendung dieser Weiterleitung ist deaktiviert",
-	'metatags_off'              => "Die Verwendung dieser Seite ist deaktiviert",
-	'links_off'                 => "Kreuzverweis für dieses Wort ist deaktiviert",
-	'group_a_meta'              => "Verwaltung von Meta-Tags erlauben",
-	'group_h_meta'              => "Diese Option ermöglicht es Benutzern mit Zugang zum Adminbereich, Meta-Tags, Überschriften und Beschreibungen für Webseitenseiten zu verwalten.",
-	'group_a_links'             => "Verwaltung von Kreuzverweisen erlauben",
-	'group_h_links'             => "Diese Option ermöglicht es Benutzern mit Zugang zum Adminbereich, Kreuzverweise für Webseitenseiten zu verwalten.",
-	'group_a_redirects'         => "Verwaltung von Weiterleitungen erlauben",
-	'group_h_redirects'         => "Diese Option ermöglicht es Benutzern mit Zugang zum Adminbereich, Weiterleitungen für Webseitenseiten zu verwalten.",
-	'group_a_st'                => "Benutzern erlauben, den Speicherort beim Hochladen von Bildern und Dateien auszuwählen",
-	'group_h_st'                => "Diese Option ermöglicht es Benutzern, beim Hochladen von Bildern und Dateien für Nachrichten auf den Server, den Speicherort aus den verfügbaren auszuwählen, in den diese Dateien hochgeladen werden.",
-	'xfield_etitle'             => "Bearbeitung des zusätzlichen Feldes",
-	'opt_storages'              => "Speicherorte",
-	'opt_storagesc'             => "Einstellung verschiedener Speicherorte für hochgeladene Bilder, Multimedia und andere Dateien.",
-	'header_s_1'                => "Verwaltung der Speicherorte",
-	'header_s_2'                => "Liste der Speicherorte",
-	'header_s_3'                => "Speicherort hinzufügen",
-	'header_s_4'                => "Speicherort bearbeiten",
-	'opt_storeagehelp'          => "In diesem Abschnitt können Sie verschiedene externe Speicherorte hinzufügen, auf die Bilder, Multimediadateien und andere hochgeladen werden. Nach dem Hinzufügen externer Speicherorte können Sie in den Skript-Einstellungen im Adminbereich wählen, welche Dateien in welchen Speicherort hochgeladen werden sollen. Außerdem können Sie in den Einstellungen der Benutzergruppen dem Benutzer erlauben, selbst den Speicherort zu wählen, in den die Datei direkt vor dem Hochladen auf den Server hochgeladen wird.",
-	'storage_name'              => "Name des Speicherorts:",
-	'storage_default'           => "Standard",
-	'storage_enabled'           => "Aktiviert",
-	'storage_on'                => "Speicherort aktiviert",
-	'storage_off'               => "Speicherort deaktiviert",
-	'storage_add'               => "Neuen Speicherort hinzufügen",
-	'storage_name_d'            => "Geben Sie den Namen Ihres externen Speicherorts an. Zum Beispiel: 'Mein FTP-Server'",
-	'storage_error'             => "Der von Ihnen ausgewählte Speicherort existiert nicht",
-	'storage_error_1'           => "Der Name des Speicherorts ist ein Pflichtfeld",
-	'storage_setd'              => "Als Standard festlegen",
-	'storage_type'              => "Typ:",
-	'mass_storage_err'          => "Sie haben keine Speicherorte für die Durchführung von Operationen ausgewählt.",
-	'storage_del'               => "Sind Sie sicher, dass Sie den Speicherort löschen möchten:",
-	'storage_upload'            => "In den Speicherort hochladen:",
-	'group_sdel'                => "Erlaubnis zur selbstständigen Löschung des eigenen Kontos",
-	'hint_sdel'                 => "Diese Option ermöglicht es, die Möglichkeit für den Benutzer ein- oder auszuschalten, sein Konto und seine Daten selbstständig von der Webseite zu löschen. Sie können eine von mehreren Optionen wählen:<br><br>1. Das Löschen des eigenen Kontos verbieten<br><br>2. Selbstständige Entscheidung erlauben und Konto löschen<br><br>3. Anfrage an die Verwaltung zur Löschung des eigenen Kontos senden.",
-	'opt_sys_r7'                => "Verboten",
-	'opt_sys_r8'                => "Selbstständige Löschung erlaubt",
-	'opt_sys_r9'                => "Senden einer Anfrage an die Verwaltung zur Löschung erlaubt",
-	'err_selfdel_1'             => "Für Ihre Benutzergruppe ist die selbstständige Löschung des Kontos nicht erlaubt. Wenden Sie sich an die Webseitenverwaltung",
-	'err_selfdel_2'             => "Für Administratoren ist die selbstständige Löschung des Kontos nicht erlaubt. Nur ein anderer Administrator kann Ihr Konto löschen",
-	'err_selfdel_3'             => "Sie haben bereits eine Anfrage an die Verwaltung zur Löschung Ihres Kontos gesendet. Warten Sie auf die Entscheidung",
-	'selfdel_wait'              => "Im Abschnitt zur Bearbeitung von Benutzern gibt es Benutzer, die die Löschung ihres Kontos von der Webseite beantragt haben und auf Ihre Aktionen warten. <a href=\"?mod=editusers\">Zur Verwaltung wechseln</a>",
-	'selfdel_wait_1'            => "Benutzer, die eine Löschungsanfrage gesendet haben:",
-	'selfdel_wait_2'            => "Liste der Benutzer, die die Löschung ihres Kontos von der Webseite beantragt haben",
-	'selfdel_wait_3'            => "Löschungsanfrage ablehnen",
-	'selfdel_wait_4'            => "Benachrichtigung über die Löschung des Kontos",
-	'selfdel_wait_5'            => "Ihr Konto {name} auf der Webseite {site} wurde von der Webseitenverwaltung auf Ihre Anfrage zur Löschung dieses Kontos von der Webseite gelöscht.",
-	'selfdel_wait_6'            => "Ihre Anfrage zur Löschung des Kontos wurde von der Verwaltung abgelehnt. Dabei wurden folgende Gründe angegeben:",
-	'selfdel_text'              => "Geben Sie den Text der Benachrichtigung über die Gründe für die Ablehnung der Kontolöschung ein, die der Benutzer per persönlicher Nachricht erhalten wird:",
-	'opt_s_acc_1'               => "Benutzerverwaltung",
-	'opt_sys_fsearchr'          => "Anzahl der gefundenen Nachricht bei der Schnellsuche",
-	'opt_sys_fsearchrd'         => "Geben Sie die maximale Anzahl der gefundenen Nachrichten ein, die in den Ergebnissen der Schnellsuche angezeigt werden",
-
 	// 17.3
 
 	// 17.2
+	'opt_sys_cpml'              => "Anzahl der Kommentare pro Seite bei der Anzeige aller letzten Kommentare",
+	'opt_sys_cpmld'             => "Geben Sie an, wie viele Kommentare pro Seite bei der Anzeige der Seite aller letzten Kommentare ausgegeben werden sollen.",
 	'opt_sys_max_new'           => "Anzahl der Stunden, in denen eine Nachricht als neu gilt",
 	'opt_sys_max_newd'          => "Geben Sie die maximale Anzahl der Stunden ein, in denen eine Nachricht nach ihrer Hinzufügung auf der Webseite als neu gilt. Diese Einstellung wird für die Tags [new] Text [/new] in Design verwendet, um neue Nachrichten zu markieren. Die Zeit wird in Stunden ab dem Moment der Hinzufügung der Nachricht auf der Webseite angegeben. Zum Beispiel 24 bedeutet, dass die Nachricht innerhalb von 24 Stunden als neu gilt.",
 	'opt_sys_max_upd'           => "Anzahl der Stunden, in denen eine Nachricht als aktualisiert gilt",
@@ -2833,7 +2730,6 @@ die Webseitenadministration",
 	'edit_au'       => "Autor:",
 	'edit_page'     => "Nachrichten pro Seite:",
 	'edit_act_1'    => "Anzeigen",
-	'edit_nonews'   => "- Keine Nachricht gefunden -",
 	'edit_title'    => "Titel",
 	'edit_com'      => "Kommentare",
 	'edit_approve'  => " Status ",
